--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "kmsn",
         "Maru",
         "notionhq",
+        "npmrc",
+        "postcss",
         "truetype",
-        "kmsn"
+        "vite"
     ]
 }
