--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:unit": "vitest",
-		"test:vitest": "vitest",
-		"test:playwright-ct": "playwright test -c playwright-ct.config.ts",
-		"test:playwright": "playwright test",
-		"test:playwright-e2e": "playwright test"
+		"test:ct": "playwright test -c playwright-ct.config.ts",
+		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
-		"@playwright/experimental-ct-svelte": "^1.30.0",
 		"@playwright/test": "^1.30.0",
 		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/kit": "^1.7.2",
