--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/labeler@v4
         with:
-          repo-token: "${{ secrets.USUYUKI_GITHUB_TOKEN }}"
+          repo-token: '${{ secrets.USUYUKI_GITHUB_TOKEN }}'
