--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"test:unit": "vitest",
+		"test:unit": "vitest run",
 		"test:ct": "playwright test -c playwright-ct.config.ts",
 		"test:e2e": "playwright test"
 	},
