--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"test:unit": "vitest run",
-		"test:ct": "playwright test -c playwright-ct.config.ts",
-		"test:e2e": "playwright test"
+		"test:u": "vitest run",
+		"test:c": "playwright test -c playwright-ct.config.ts",
+		"test:i": "playwright test"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.30.0",
