--- a/.github/workflows/testUnit.yml
+++ b/.github/workflows/testUnit.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
         
-      - name: lint
+      - name: Unit test
         run: pnpm test:u
