--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,15 +10,16 @@
 		"files.trimTrailingWhitespace": false // Markdown ファイルの末尾の空白を取り除く
 	},
 	"cSpell.words": [
-		"Decol",
-		"Kaisei",
-		"kmsn",
-		"Maru",
-		"notionhq",
-		"npmrc",
-		"postcss",
-		"tailwindcss",
-		"truetype",
-		"vite"
-	]
+    "Decol",
+    "Kaisei",
+    "kmsn",
+    "Maru",
+    "notionhq",
+    "npmrc",
+    "postcss",
+    "tailwindcss",
+    "truetype",
+    "vite",
+    "Vitest"
+  ]
 }
