--- a/.github/workflows/testIntegration.yml
+++ b/.github/workflows/testIntegration.yml
@@ -45,5 +45,8 @@ jobs:
       - name: Install playwright browsers
         run: npx playwright install --with-deps
 
+      - name: Generate Env 
+        run: cat .env.example | sed -e "s/INSERT_NOTION_API_KEY/${{ secrets.NOTION_API_KEY }}/g" > .env
+
       - name: Integration test
         run: pnpm test:i
