--- a/.github/workflows/staticAnalysis.yml
+++ b/.github/workflows/staticAnalysis.yml
@@ -42,5 +42,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       
+      - name: Generate Env 
+        run: cat .env.example | sed -e "s/INSERT_NOTION_API_KEY/${{ secrets.NOTION_API_KEY }}/g" > .env
+
       - name: svelte-check
         run: pnpm check
