--- a/.github/workflows/staticAnalysis.yml
+++ b/.github/workflows/staticAnalysis.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       
-      - name: Generate Env 
-        run: cat .env.example | sed -e "s/INSERT_NOTION_API_KEY/${{ secrets.NOTION_API_KEY }}/g" > .env
+      - name: Generate Dummy Env 
+        run: cp .env.example .env
 
       - name: svelte-check
         run: pnpm check
