--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.30.0",
 		"@sveltejs/adapter-auto": "^1.0.3",
+		"@sveltejs/adapter-cloudflare": "^2.0.2",
 		"@sveltejs/kit": "^1.7.2",
 		"@testing-library/svelte": "^3.2.2",
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
