--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.1.2",
-		"vitest": "^0.25.8"
+		"vitest": "^0.25.8",
+		"@playwright/experimental-ct-svelte": "^1.30.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@notionhq/client": "^2.2.3",
-		"@playwright/experimental-ct-svelte": "^1.30.0"
+		"@notionhq/client": "^2.2.3"
 	}
 }
