--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@testing-library/svelte": "^3.2.2",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
+		"@zerodevx/svelte-img": "^1.2.6",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
