--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-cloudflare": "^2.0.2",
 		"@sveltejs/kit": "^1.8.5",
 		"@testing-library/svelte": "^3.2.2",
+		"@types/tryghost__content-api": "^1.3.11",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
 		"autoprefixer": "^10.4.13",
