--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,12 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"types": ["vitest/globals"]
+		"types": ["vitest/globals"],
+		"baseUrl": ".",
+		"paths": {
+			// astro.config.mjsにも定義
+			"$lib/*": ["src/lib/*"]
+		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
