--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"types": ["vitest/globals"],
-		"baseUrl": ".",
-		"paths": {
-			// astro.config.mjsにも定義
-			"$lib/*": ["src/lib/*"]
-		}
+		"types": ["vitest/globals"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
