--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/kit": "^1.11.0",
 		"@testing-library/svelte": "^3.2.2",
+		"@types/gtag.js": "^0.0.12",
 		"@types/tryghost__content-api": "^1.3.11",
 		"@typescript-eslint/eslint-plugin": "^5.54.1",
 		"@typescript-eslint/parser": "^5.54.1",
