--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -4,7 +4,7 @@ account_id = "<your-account-id>"
 main = ".cloudflare/worker.js"
 site.bucket = ".cloudflare/public"
 
-build.command = "npm run build"
+build.command = "pnpm build"
 
 compatibility_date = "2021-11-12"
 workers_dev = true
