--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,4 +51,10 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           workingDirectory: .
-          inputs: ${{ secrets.WRANGLER_TOML }}
+          command: publish --config wrangler-ci.toml --project-name=usuyuki-portfolio-v6
+          secrets: |
+            CF_ACCOUNT_ID 
+            CF_KV_NAMESPACES
+          env:
+            CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+            CF_KV_NAMESPACES: ${{ secrets.CF_KV_NAMESPACES }}
