どうやってもできないので本家にissuesを投げて一旦保留にする

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
 name: 自動デプロイ 
 
-on:
-  pull_request:
-    branches: [main]
 # on:
-#   push:
-#     branches:
-#       - main
+#   pull_request:
+#     branches: [main]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
