--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
             publish --config wrangler-ci.toml --outdir=dist
           env: |
             CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+            # ↓{ binding = "KV", id = "override", preview_id = "override" }と文字列で入れる
             CF_KV_NAMESPACES: ${{ secrets.CF_KV_NAMESPACES }}
             NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
             GHOST_API_URL: ${{ secrets.GHOST_API_URL }}
