--- a/wrangler-ci.toml
+++ b/wrangler-ci.toml
@@ -1,12 +1,12 @@
-name = "usuyuki-portfolio-v6-v2"
+name = "usuyuki-portfolio-v6"
 account_id = "override"
 
-main = "dist/worker.js"
-site.bucket = "dist/public"
+main = ".cloudflare/worker.js"
+site.bucket = ".cloudflare/public"
 
 build.command = "pnpm build"
 
-compatibility_date = "2023-03-15"
+compatibility_date = "2023-03-18"
 workers_dev = true
 
 kv_namespaces = [
