--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
             echo "GHOST_CONTENT_KEY=${{ secrets.GHOST_CONTENT_KEY }}" >> .env
             ls -la
           command: |
-            publish --config wrangler-ci.toml
+            publish
+            # --config指定しても効かないので注意
           env: |
             CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
             # ↓{ binding = "KV", id = "override", preview_id = "override" }と文字列で入れる
