--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             publish
             # --config指定しても効かないので注意
           env: |
-            CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+            CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
             # ↓{ binding = "KV", id = "override", preview_id = "override" }と文字列で入れる
             CF_KV_NAMESPACES: ${{ secrets.CF_KV_NAMESPACES }}
             NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
