--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,15 @@ jobs:
           command: |
             publish
             # --config指定しても効かないので注意
+          secrets: |
+            ACCOUNT_ID
+            KV_NAMESPACES
           env: |
-            account_id: ${{ secrets.CF_ACCOUNT_ID }}
+            ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
             # ↓{ binding = "KV", id = "override", preview_id = "override" }と文字列で入れる
-            kv_namespaces: ${{ secrets.CF_KV_NAMESPACES }}
-            NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-            GHOST_API_URL: ${{ secrets.GHOST_API_URL }}
-            GHOST_CONTENT_KEY: ${{ secrets.GHOST_CONTENT_KEY }}
+            KV_NAMESPACES: ${{ secrets.CF_KV_NAMESPACES }}
+            # NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+            # GHOST_API_URL: ${{ secrets.GHOST_API_URL }}
+            # GHOST_CONTENT_KEY: ${{ secrets.GHOST_CONTENT_KEY }}
             
             # 参考:https://developers.cloudflare.com/workers/wrangler/ci-cd/
