--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,5 +10,5 @@ compatibility_date = "2023-03-18"
 workers_dev = true
 
 kv_namespaces = [
-  { binding = "KV", id = "", preview_id = "" }
+  { binding = "KV", id = "", preview_id = "override" }
 ]
