--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,9 @@ jobs:
             echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
             echo "GHOST_API_URL=${{ secrets.GHOST_API_URL }}" >> .env
             echo "GHOST_CONTENT_KEY=${{ secrets.GHOST_CONTENT_KEY }}" >> .env
-            sed -i -e "s/\(account_id = \".*\)\(\"\)/\\1${{ secrets.CF_ACCOUNT_ID }}\2/" wrangler.toml'
-            sed -i -e "s/\(id = \".*\)\(\"\)/\\1${{ secrets.CF_KV_ID }}\2/" wrangler.toml'
+            # どうやってもできないのでSEDで書き換える↓
+            sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml'
+            sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml'
           command: |
             publish
             # --config指定しても効かないので注意
