--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
             echo "GHOST_API_URL=${{ secrets.GHOST_API_URL }}" >> .env
             echo "GHOST_CONTENT_KEY=${{ secrets.GHOST_CONTENT_KEY }}" >> .env
             # どうやってもできないのでSEDで書き換える↓
-            sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml'
-            sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml'
+            sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml
+            sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml
           command: |
             publish
             # --config指定しても効かないので注意
