refactor コマンド整理など

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,11 +19,13 @@
 		"Kaisei",
 		"kmsn",
 		"kodawari",
+		"kokosuki",
 		"Maru",
 		"notionhq",
 		"npmrc",
 		"oretoku",
 		"postcss",
+		"souko",
 		"tailwindcss",
 		"truetype",
 		"tuyotuyo",
