--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -1,14 +1,14 @@
-name = "<your-service-name>"
-account_id = "<your-account-id>"
+name = "usuyuki-portfolio-v6"
+account_id = "ACCOUNT_ID"
 
 main = ".cloudflare/worker.js"
 site.bucket = ".cloudflare/public"
 
 build.command = "pnpm build"
 
-compatibility_date = "2021-11-12"
+compatibility_date = "2023-03-18"
 workers_dev = true
 
 kv_namespaces = [
-  { binding = "KV", id = "", preview_id = "" }
+  { binding = "KV", id = "KV_ID", preview_id = "override" }
 ]
