--- a/.github/workflows/testIntegration.yml
+++ b/.github/workflows/testIntegration.yml
@@ -50,6 +50,12 @@ jobs:
           echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
           echo "GHOST_API_URL=${{ secrets.GHOST_API_URL }}" >> .env
           echo "GHOST_CONTENT_KEY=${{ secrets.GHOST_CONTENT_KEY }}" >> .env
+    
+      - name: Generate wrangler.toml
+        run: |
+          cp wrangler.toml.example wrangler.toml
+          sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml
+          sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml
 
       - name: Integration test
         run: pnpm test:i
