--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,8 @@ node_modules
 .env.*
 !.env.example
 /playwright
+/playwright-report
+/.cloudflare
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
