--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.3.3",
-		"vitest": "^0.25.8"
+		"vitest": "^0.25.8",
+		"wrangler": "^2.18.0"
 	},
 	"type": "module",
 	"dependencies": {
