--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
 		"test:i": "playwright test -c playwright.config.ts"
 	},
 	"devDependencies": {
-		"@playwright/experimental-ct-svelte": "^1.40.0",
-		"@playwright/test": "^1.40.0",
+		"@playwright/experimental-ct-svelte": "^1.42.1",
+		"@playwright/test": "^1.42.1",
 		"@sveltejs/adapter-auto": "^1.0.3",
-		"@sveltejs/adapter-cloudflare-workers": "^1.2.1",
-		"@sveltejs/kit": "^1.27.6",
+		"@sveltejs/adapter-cloudflare-workers": "^1.2.3",
+		"@sveltejs/kit": "^1.30.4",
 		"@testing-library/svelte": "^3.2.2",
 		"@types/gtag.js": "^0.0.12",
-		"@types/tryghost__content-api": "^1.3.14",
+		"@types/tryghost__content-api": "^1.3.15",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.54.0",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"jsdom": "^21.1.2",
-		"postcss": "^8.4.31",
+		"postcss": "^8.4.38",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.6.2",
-		"tailwindcss": "^3.3.5",
+		"svelte": "^4.2.12",
+		"svelte-check": "^3.6.8",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.6.2",
-		"typescript": "^5.0.0",
-		"vite": "^4.5.0",
+		"typescript": "^5.4.3",
+		"vite": "^4.5.3",
 		"vitest": "^0.25.8",
-		"wrangler": "^2.20.1"
+		"wrangler": "^2.21.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@notionhq/client": "^2.2.13",
+		"@notionhq/client": "^2.2.14",
 		"@tryghost/content-api": "^1.11.20",
 		"embla-carousel": "^7.1.0",
 		"embla-carousel-autoplay": "^7.1.0",
