--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           command: |
             publish
             # --config指定しても効かないので注意
-          env: |
+          # env: |
             # NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
             # GHOST_API_URL: ${{ secrets.GHOST_API_URL }}
             # GHOST_CONTENT_KEY: ${{ secrets.GHOST_CONTENT_KEY }}
