--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           preCommands: |
-            corepack enable
+            npm install -g pnpm
             pnpm install
             touch .env
             echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
