--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,13 @@
 name: Cloudflare Workersへの自動デプロイ 
 
+# on:
+#   pull_request:
+#     branches:
+#       - main
+#     types: [closed]  
 on:
   pull_request:
-    branches:
-      - main
-    types: [closed]  
+    branches: [main]
 
 jobs:
   deploy:
@@ -18,6 +21,8 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           preCommands: |
+            pwd
+            ls -laF
             pnpm install
             touch .env
             echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
