--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -44,7 +45,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Publish
         uses: cloudflare/wrangler-action@v3
@@ -62,7 +63,7 @@ jobs:
             sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml
             sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml
           command: |
-            publish
+            deploy
             # --config指定しても効かないので注意
           # env: |
             # NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
