--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,21 +47,24 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Generate Env 
+        run: |
+          echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
+          echo "GHOST_API_URL=${{ secrets.GHOST_API_URL }}" >> .env
+          echo "GHOST_CONTENT_KEY=${{ secrets.GHOST_CONTENT_KEY }}" >> .env
+    
+      - name: Generate wrangler.toml
+        run: |
+          cp wrangler.toml.example wrangler.toml
+          sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml
+          sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml
+
       - name: Publish
         uses: cloudflare/wrangler-action@v3
         with:
           workingDirectory: .
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          preCommands: |
-            touch .env
-            echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
-            echo "GHOST_API_URL=${{ secrets.GHOST_API_URL }}" >> .env
-            echo "GHOST_CONTENT_KEY=${{ secrets.GHOST_CONTENT_KEY }}" >> .env
-            # どうやってもできないのでSEDで書き換える↓
-            cp wrangler.toml.example wrangler.toml
-            sed -i -e "s/ACCOUNT_ID/${{ secrets.CF_ACCOUNT_ID }}/" wrangler.toml
-            sed -i -e "s/KV_ID/${{ secrets.CF_KV_ID }}/" wrangler.toml
           command: |
             deploy
             # --config指定しても効かないので注意
