fix API Tokenが入らないのでチェック

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: cloudflare
         run: |
+          echo $CLOUDFLARE_API_TOKEN
           pnpm wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
