--- a/package.json
+++ b/package.json
@@ -18,40 +18,42 @@
 		"test:i": "playwright test -c playwright.config.ts"
 	},
 	"devDependencies": {
-		"@playwright/experimental-ct-svelte": "^1.42.1",
-		"@playwright/test": "^1.42.1",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/adapter-cloudflare-workers": "^2.2.0",
-		"@sveltejs/kit": "^2.5.4",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@playwright/experimental-ct-svelte": "^1.49.1",
+		"@playwright/test": "^1.49.1",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-cloudflare-workers": "^2.7.0",
+		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@testing-library/svelte": "^3.2.2",
 		"@types/gtag.js": "^0.0.12",
-		"@types/tryghost__content-api": "^1.3.15",
+		"@types/tryghost__content-api": "^1.3.17",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
 		"jsdom": "^21.1.2",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.49",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.8",
-		"tailwindcss": "^3.4.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.3",
-		"vite": "^5.2.6",
-		"vitest": "^1.4.0",
-		"wrangler": "^3.39.0"
+		"svelte": "^4.2.19",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.17",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.19.0",
+		"vite": "^5.4.11",
+		"vitest": "^1.6.0",
+		"wrangler": "^3.99.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@notionhq/client": "^2.2.14",
-		"@tryghost/content-api": "^1.11.20",
+		"@notionhq/client": "^2.2.15",
+		"@tryghost/content-api": "^1.11.21",
 		"embla-carousel": "^7.1.0",
 		"embla-carousel-autoplay": "^7.1.0",
 		"embla-carousel-svelte": "^7.1.0"
-	}
+	},
+	"packageManager": "pnpm@8.14.1+sha1.d039b38e0b20ad012ed548e44267b8d4c88b447a"
 }
