--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,8 @@
 	"editor.defaultFormatter": "esbenp.prettier-vscode", // デフォルトのフォーマッタを Prettier に設定
 	"editor.formatOnSave": true, // 保存時にフォーマッタを走らせる
 	"editor.codeActionsOnSave": {
-		"source.organizeImports": true, //保存時に import を整理する
-		"source.fixAll.eslint": true // 保村時に ESLint で修正する
+		"source.organizeImports": "explicit",
+		"source.fixAll.eslint": "explicit"
 	},
 	"[svelte]": {
 		"editor.defaultFormatter": "svelte.svelte-vscode"
