--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,12 @@
 	"printWidth": 100,
 	"tabWidth": 4,
 	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
