--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"test:u": "vitest run",
+		"test:u": "vitest run --config vitest.config.ts",
 		"test:i": "playwright test -c playwright.config.ts"
 	},
 	"devDependencies": {
