--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
 		"prepare": "svelte-kit sync",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
+		"lint": "biome lint .",
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"biome:check": "biome check .",
+		"biome:fix": "biome check --write .",
 		"test:u": "vitest run --config vitest.config.ts",
 		"test:i": "playwright test -c playwright.config.ts"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.1.3",
 		"@playwright/test": "^1.54.2",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-cloudflare": "^7.1.2",
@@ -25,22 +29,14 @@
 		"@testing-library/svelte": "^5.2.8",
 		"@types/gtag.js": "^0.0.20",
 		"@types/tryghost__content-api": "^1.3.17",
-		"@typescript-eslint/eslint-plugin": "^8.38.0",
 		"autoprefixer": "^10.4.21",
-		"eslint": "^9.32.0",
-		"eslint-config-prettier": "^9.1.2",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.15.0",
 		"jsdom": "^25.0.1",
 		"postcss": "^8.5.6",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
 		"svelte": "^5.37.2",
 		"svelte-check": "^4.3.0",
 		"tailwindcss": "^3.4.17",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.38.0",
 		"vite": "^7.0.6",
 		"vitest": "^2.1.9",
 		"wrangler": "^4.27.0"
