--- a/biome.json
+++ b/biome.json
@@ -5,24 +5,14 @@
 		"clientKind": "git",
 		"useIgnoreFile": true
 	},
-	"files": {
-		"ignoreUnknown": false
-	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab",
-		"indentWidth": 2
+		"indentStyle": "tab"
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
-			"style": {
-				"noNonNullAssertion": "off"
-			},
-			"suspicious": {
-				"noExplicitAny": "warn"
-			}
+			"recommended": true
 		}
 	},
 	"javascript": {
@@ -31,20 +21,16 @@
 			"semicolons": "always"
 		}
 	},
-	"assist": {
-		"enabled": true,
-		"actions": {
-			"source": {
-				"organizeImports": "on"
-			}
-		}
-	},
 	"overrides": [
 		{
-			"includes": ["*.svelte"],
-			"formatter": {
-				"indentStyle": "tab",
-				"indentWidth": 2
+			"includes": ["**/*.svelte"],
+			"linter": {
+				"rules": {
+					"correctness": {
+						"noUnusedImports": "off",
+						"noUnusedVariables": "off"
+					}
+				}
 			}
 		}
 	]
