--- a/biome.json
+++ b/biome.json
@@ -29,6 +29,9 @@
 					"correctness": {
 						"noUnusedImports": "off",
 						"noUnusedVariables": "off"
+					},
+					"style": {
+						"useConst": "off"
 					}
 				}
 			}
