fix biome error4;5u

--- a/biome.json
+++ b/biome.json
@@ -26,12 +26,13 @@
 			"includes": ["**/*.svelte"],
 			"linter": {
 				"rules": {
+					"style": {
+						"useConst": "off",
+						"useImportType": "off"
+					},
 					"correctness": {
 						"noUnusedImports": "off",
 						"noUnusedVariables": "off"
-					},
-					"style": {
-						"useConst": "off"
 					}
 				}
 			}
