--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -4,6 +4,7 @@ account_id = "ACCOUNT_ID"
 main = ".cloudflare/worker.js"
 
 compatibility_date = "2025-08-02"
+compatibility_flags = ["nodejs_compat"]
 
 [assets]
 directory = ".cloudflare/assets"
