--- a/package.json
+++ b/package.json
@@ -20,29 +20,30 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.3",
 		"@playwright/test": "^1.54.2",
-		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-cloudflare": "^7.1.2",
 		"@sveltejs/kit": "^2.27.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@testing-library/svelte": "^5.2.8",
 		"@types/gtag.js": "^0.0.20",
 		"@types/tryghost__content-api": "^1.3.17",
 		"autoprefixer": "^10.4.21",
-		"jsdom": "^25.0.1",
+		"jsdom": "^26.1.0",
 		"postcss": "^8.5.6",
 		"svelte": "^5.37.2",
 		"svelte-check": "^4.3.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.11",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
 		"vite": "^7.0.6",
-		"vitest": "^2.1.9",
+		"vitest": "^3.2.4",
 		"wrangler": "^4.27.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@notionhq/client": "^4.0.1",
-		"@tryghost/content-api": "^1.11.21",
+		"@tryghost/content-api": "^1.12.0",
 		"embla-carousel": "^8.6.0",
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-svelte": "^8.6.0"
