--- a/biome.json
+++ b/biome.json
@@ -30,6 +30,16 @@
 					}
 				}
 			}
+		},
+		{
+			"includes": ["**/*.css"],
+			"linter": {
+				"rules": {
+					"suspicious": {
+						"noUnknownAtRules": "off"
+					}
+				}
+			}
 		}
 	]
 }
