--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.0/schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
@@ -17,26 +17,31 @@
 	},
 	"overrides": [
 		{
-			"includes": ["**/*.svelte"],
+			"includes": ["**/*.css"],
+			"css": {
+				"parser": {
+					"cssModules": false,
+					"tailwindDirectives": true
+				}
+			},
 			"linter": {
 				"rules": {
-					"style": {
-						"useConst": "off",
-						"useImportType": "off"
-					},
-					"correctness": {
-						"noUnusedImports": "off",
-						"noUnusedVariables": "off"
+					"suspicious": {
+						"noUnknownAtRules": "off"
 					}
 				}
 			}
 		},
 		{
-			"includes": ["**/*.css"],
+			"includes": ["**/*.svelte"],
 			"linter": {
 				"rules": {
-					"suspicious": {
-						"noUnknownAtRules": "off"
+					"style": {
+						"useConst": "off"
+					},
+					"correctness": {
+						"noUnusedImports": "off",
+						"noUnusedVariables": "off"
 					}
 				}
 			}
